--- a/style.css
+++ b/style.css
@@ -4,145 +4,154 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+
+input,
+button {
+  outline: none;
+}
+
+.matrix {
+  display: block;
   width: 500px;
   margin: 0 auto;
-  display: block;
   text-align: right;
-}
-.aaa img {
-  width: 100%;
-}
-.aaa .more_inf {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
-.aaa { text-align: center;
+.matrix,
+.matrix__img {
+  max-width: 512px;
 }
-}
-.centered-main-page-element {
+
+.form {
   display: block;
   width: 500px;
-  margin: 0 auto 0;
+  margin: 0 auto;
 }
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1
-}
-.task-row-wrapper {
+
+.form__wrapper {
   display: flex;
 }
-ul {
-  margin:0;
+
+.form__label,
+.form__input-text {
+  display: inline-block;
+  width: 56%;
+  flex-grow: 1;
+}
+
+.form__list {
+  margin: 0px;
   padding: 0px;
 }
-li, h3 {
-  list-style:none;
+
+.form__item {
+  list-style: none;
 }
-input,button{
-  outline:none;
-}
-button {
-  background: none;
+
+.form__button {
+  width: 60px;
   border: 0px;
   color: #888;
   font-size: 15px;
-  width: 60px;
   font-family: Lato, sans-serif;
+  background: none;
   cursor: pointer;
 }
-button:hover {
+
+.form__button:hover {
   color: #3a3A3a;
 }
+
 /* Heading */
-h3,
-label[for="new-task"] {
+.form__title {
+  margin: 0;
+  padding: 30px 0 10px;
+  border-bottom: 2px solid #333;
   color: #333;
   font-weight: 700;
   font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
-  margin: 0;
-  font-size: 18px;
-  line-height: 18px;
+
+.form__input-text {
+  display: none;
   height: 21px;
+  margin: 0;
   padding: 0 9px;
   border: 1px solid #dDd;
-  background: #FFF;
   border-radius: 6px;
+  font-size: 18px;
   font-family: Lato, sans-serif;
+  line-height: 18px;
+  background: #FFF;
   color: #888;
 }
-input[type="text"]:focus {
+
+.form__text-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.form__title:first-child {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+
+.input_add-item {
+  display: inline-block;
   width: 318px;
 }
 
 /* Task list */
-li {
-  overflow: hidden;
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
-
+.form__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-li > * {
-  vertical-align: middle;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  overflow: hidden;
 }
 
-li > input[type="checkbox"] {
+.form__item > .form__input-checkbox {
   margin: 0 10px;
 }
-li > label {
-  padding-left: 10px;
+
+.form__label {
   box-sizing: border-box;
-  font-size: 18px;
   width: 226px;
+  padding-left: 10px;
+  font-size: 18px;
 }
-li > input[type="text"] {
-  width: 226px
-}
-button.delete img {
+
+.button__img-delete {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button__img-delete:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
-  text-decoration: line-through
+.completed-tasks .form__label {
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-  display:none
+
+.form__item_edit .form__input-text {
+  display: inline-block;
+  width: 224px;
 }
 
-ul li.editMode input[type=text] {
-  display:inline-block;
-  width:224px
+.form__item_edit .form__label {
+  display: none;
 }
 
-ul li.editMode label {
-  display:none;
+@media (max-width: 768px) {
+  .matrix {
+    text-align: center;
+  }
 }
