--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Basic Style */
 body {
   background-color: #f8f8f8;
   color: #333;
@@ -10,21 +9,22 @@ button {
   outline: none;
 }
 
-.matrix {
-  display: block;
+/* Header */
+.header {
   width: 500px;
   margin: 0 auto;
   text-align: right;
   font-family: fantasy, cursive;
 }
 
-.matrix,
-.matrix__img {
-  max-width: 512px;
+.header,
+.header__img {
+  max-width: 500px;
 }
 
-.form {
-  display: block;
+/* Main */
+
+.main {
   width: 500px;
   margin: 0 auto;
 }
@@ -64,7 +64,7 @@ button {
   color: #3a3a3a;
 }
 
-/* Heading */
+
 .form__title {
   margin: 0;
   padding: 30px 0 10px;
@@ -149,7 +149,7 @@ button {
 
 /* Adaptivity */
 @media (max-width: 768px) {
-  .matrix {
+  .header {
     text-align: center;
   }
 }
